# py_universal_loader

./: DOCUMENTATION.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml  docker.yml  publish.yml
docs/: api.md  index.md  loaders.md
src/py_universal_loader/: __init__.py  base.py  bigquery_loader.py  databricks_loader.py  duckdb_loader.py  main.py  mssql_loader.py  mysql_loader.py  postgres_loader.py  redshift_loader.py  snowflake_loader.py  sqlite_loader.py
tests/: test_bigquery_loader.py  test_core.py  test_databricks_loader.py  test_duckdb_loader.py  test_main.py  test_mssql_loader.py  test_mysql_loader.py  test_postgres_loader.py  test_redshift_loader.py  test_snowflake_loader.py  test_sqlite_loader.py
